--- a/ontology-ui-demo/src/main/webapp/WEB-INF/web.xml
+++ b/ontology-ui-demo/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,15 @@
 		<servlet-name>ontologyQueryServiceImpl</servlet-name>
 		<url-pattern>/ExampleUi/ontologyQuery</url-pattern>
 	</servlet-mapping>
-
+	
+<servlet>
+  <servlet-name>jUnitHostImpl</servlet-name>
+  <servlet-class>com.google.gwt.junit.server.JUnitHostImpl</servlet-class>
+</servlet>
+<servlet-mapping>
+  <servlet-name>jUnitHostImpl</servlet-name>
+  <url-pattern>/ExampleUi/junithost/*</url-pattern>
+</servlet-mapping>
 
   <!-- Default page to serve -->
   <welcome-file-list>
