--- a/ontology-gwt-svc/src/main/webapp/config.properties
+++ b/ontology-gwt-svc/src/main/webapp/config.properties
@@ -3,7 +3,7 @@ rules.store.endpoint.get.url=http://localhost:8088/sim-rt/wicep/rules
 rules.store.endpoint.add.url=http://localhost:8088/sim-rt/wicep/rule/add
 gsn.ws.endpoint.url=http://localhost:22001/services/GSNWebService
 gsn.vs.template.path=virtual-sensor/scriptlet-template.xml
-triple.store.service=http://waterinformatics1-cdc.it.csiro.au/openrdf-sesame
-chaffey.triple.store.endpoint=http://waterinformatics1-cdc.it.csiro.au/openrdf-sesame/repositories/chaffey/statements
-uwda.triple.store.endpoint=http://waterinformatics1-cdc.it.csiro.au/openrdf-sesame/repositories/uwda/statements
-triple.store.statements.endpoint=http://waterinformatics1-cdc.it.csiro.au/openrdf-sesame/repositories/event-detection/statements
+triple.store.service=http://waterinformatics-ext1-cdc.it.csiro.au/openrdf-sesame
+chaffey.triple.store.endpoint=http://waterinformatics-ext1-cdc.it.csiro.au/openrdf-sesame/repositories/chaffey/statements
+uwda.triple.store.endpoint=http://waterinformatics-ext1-cdc.it.csiro.au/openrdf-sesame/repositories/uwda/statements
+triple.store.statements.endpoint=http://waterinformatics-ext1-cdc.it.csiro.au/openrdf-sesame/repositories/event-detection/statements
